front end connects to backend, authentication working.
