# expressbackend/swagger.yaml
@@ -19,7 +19,9 @@ paths:
         201:
           description: Registration successful
         400:
-          description: Invalid role. Must be student or tutor.
+          description: Invalid role. Must be student, tutor, or manager.
+        401:
+          description: Unauthorized to add manager role
         500:
           description: Internal server error
   /auth/login:
@@ -51,126 +53,22 @@ paths:
           description: Incorrect email or password
         500:
           description: Internal server error
-  /auth/make-manager:
-    put:
-      summary: Assign a user as a manager
-      tags:
-        - Authentication
-      security:
-        - bearerAuth: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                  description: The name of the user
-                email:
-                  type: string
-                  description: The email of the user
-                password:
-                  type: string
-                  format: password
-                  description: The password of the user
-              required:
-                - name
-                - email
-                - password
-      responses:
-        200:
-          description: User has been assigned as a manager
-        403:
-          description: Unauthorized
-        500:
-          description: Internal server error
-  /auth/add-role/{userId}/{role}:
-    put:
-      summary: Add a role to a user
-      tags:
-        - Authentication
-      security:
-        - bearerAuth: []
-      parameters:
-        - in: path
-          name: userId
-          required: true
-          schema:
-            type: integer
-          description: The ID of the user
-        - in: path
-          name: role
-          required: true
-          schema:
-            type: string
-          description: The role to add (student or tutor)
-      responses:
-        200:
-          description: Role has been added
-        400:
-          description: Invalid role, user already has the role, or invalid userId
-        403:
-          description: Unauthorized
-        404:
-          description: User not found
-        500:
-          description: Internal server error
 
-  /auth/remove-role/{userId}/{role}:
-    put:
-      summary: Remove a role from a user
+  /users:
+    get:
+      summary: Get all users
       tags:
-        - Authentication
+        - Users
       security:
         - bearerAuth: []
-      parameters:
-        - in: path
-          name: userId
-          required: true
-          schema:
-            type: integer
-          description: The ID of the user
-        - in: path
-          name: role
-          required: true
-          schema:
-            type: string
-          description: The role to remove (student, tutor, or manager)
       responses:
-        200:
-          description: Role has been removed
-        400:
-          description: Invalid role or unauthorized
-        403:
+        "200":
+          description: Users retrieved
+        "401":
           description: Unauthorized
-        404:
-          description: User not found
-        500:
-          description: Internal server error
-  /auth/delete-user/{userId}:
-    delete:
-      summary: Delete a user
-      tags:
-        - Authentication
-      security:
-        - bearerAuth: []
-      parameters:
-        - in: path
-          name: userId
-          required: true
-          schema:
-            type: integer
-          description: The ID of the user
-      responses:
-        200:
-          description: User has been deleted
-        403:
-          description: Unauthorized
-        404:
-          description: User not found
-        500:
+        "403":
+          description: Forbidden
+        "500":
           description: Internal server error
 
   /users/{userId}:
@@ -198,27 +96,41 @@ paths:
           description: User not found
         "500":
           description: Internal server error
-  /users:
-    get:
-      summary: Get all users
+    delete:
+      summary: Delete a user
       tags:
         - Users
       security:
         - bearerAuth: []
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          schema:
+            type: integer
+          description: The ID of the user
       responses:
-        "200":
-          description: Users retrieved
-        "401":
+        200:
+          description: User has been deleted
+        403:
           description: Unauthorized
-        "403":
-          description: Forbidden
-        "500":
+        404:
+          description: User not found
+        500:
           description: Internal server error
-  /users/password:
     put:
-      summary: Update user password
+      summary: Update a user
       tags:
         - Users
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: userId
+          in: path
+          description: ID of the user to update
+          required: true
+          schema:
+            type: integer
       requestBody:
         required: true
         content:
@@ -226,44 +138,71 @@ paths:
             schema:
               type: object
               properties:
+                name:
+                  type: string
+                email:
+                  type: string
                 currentPassword:
                   type: string
-                  format: password
-                  description: The user's current password
                 newPassword:
                   type: string
-                  format: password
-                  description: The new password
-              required:
-                - currentPassword
-                - newPassword
-      security:
-        - bearerAuth: []
       responses:
         "200":
-          description: Password updated
+          description: User updated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
         "401":
           description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        "404":
+          description: User not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
         "500":
           description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+
 components:
   schemas:
     User:
       type: object
       properties:
-        name:
-          type: string
-          description: The name of the user
+        roles:
+          type: array
+          items:
+            type: string
+          description: Array of user roles (e.g., "student", "tutor", "manager")
         email:
           type: string
-          description: The email of the user
+          description: User's email address
         password:
           type: string
-          format: password
-          description: The password of the user
-        role:
+          description: User's password
+        name:
           type: string
-          description: The role of the user (student, tutor, or manager)
+          description: User's full name
   securitySchemes:
     bearerAuth:
       type: http
